tests/ui/type-alias-impl-trait/issue-74244.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-74244.rs:9:6
   |
LL | impl<T> Allocator for DefaultAllocator {
   |      ^ unconstrained type parameter

error[E0282]: type annotations needed
  --> $DIR/issue-74244.rs:16:13
   |
LL | fn foo() -> A {
   |             ^ cannot infer type for type parameter `T`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0207, E0282.
For more information about an error, try `rustc --explain E0207`.
